# double_list_template

./: CMakeLists.txt  LICENSE  README.md  debug.txt  main.c
src/: Sorting.c  double_list.c  list.c  memory_management.c  pfun.c  prtT.c  recursion.c  strstr.c  test.c  typeConversion.c
